--- a/AmicaleINSA/Base.lproj/Main.storyboard
+++ b/AmicaleINSA/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
@@ -581,7 +581,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qaA-nQ-MBQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1808" y="2620"/>
+            <point key="canvasLocation" x="2268" y="1992"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9yC-Tp-mp0">
@@ -661,11 +661,12 @@
                         <outlet property="ActualBarButtonItem" destination="0fp-Fn-4Ee" id="qT9-Eo-WD8"/>
                         <outlet property="menuButton" destination="En1-GD-6Tq" id="alE-cr-r09"/>
                         <outlet property="webView" destination="C3B-5g-ZB3" id="dWG-K6-LCE"/>
+                        <segue destination="luC-Ld-6yI" kind="show" identifier="showSettingsFromPlanning" id="Q9B-wM-gwW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X7z-Uf-SEV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3513" y="1176"/>
+            <point key="canvasLocation" x="3567" y="1214"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TVz-lj-Ak0">
@@ -878,6 +879,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Xal-rq-VJR"/>
-        <segue reference="lB9-bo-Jea"/>
+        <segue reference="Q9B-wM-gwW"/>
     </inferredMetricsTieBreakers>
 </document>
